<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical"
    tools:context=".ui.main.ControlFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/control"
        android:textColor="@color/primary_text"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="10dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:id="@+id/rlPumpIrrigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_inactive"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgPumpIrrigation"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_circle_green"
                        android:padding="12dp"
                        android:src="@drawable/ic_pump_irrigation" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/imgPumpIrrigation"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/pump_irrigation"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStatusPumpIrrigation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="36dp"
                        android:layout_toEndOf="@id/imgPumpIrrigation"
                        android:fontFamily="@font/roboto"

                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchPumpIrrigation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imgPumpIrrigation"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="10dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:id="@+id/rlPumpPh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_inactive"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgPumpPh"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_circle_green"
                        android:padding="12dp"
                        android:src="@drawable/ic_pump_ph" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/imgPumpPh"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/pump_ph"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStatusPumpPh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="36dp"
                        android:layout_toEndOf="@id/imgPumpPh"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchPumpPh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imgPumpPh"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="10dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:id="@+id/rlPumpNutrisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_inactive"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgPumpNutrisi"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_circle_green"
                        android:padding="12dp"
                        android:src="@drawable/ic_pump_nutrisi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/imgPumpNutrisi"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/pump_nutrisi"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStatusPumpNutrisi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="36dp"
                        android:layout_toEndOf="@id/imgPumpNutrisi"
                        android:fontFamily="@font/roboto"

                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchPumpNutrisi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imgPumpNutrisi"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:elevation="10dp"
                app:cardCornerRadius="12dp">

                <RelativeLayout
                    android:id="@+id/rlPumpMix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_inactive"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imgPumpMix"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_circle_green"
                        android:padding="12dp"
                        android:src="@drawable/ic_pump_mix" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="6dp"
                        android:layout_toEndOf="@id/imgPumpMix"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/pump_mix"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvStatusPumpMix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="36dp"
                        android:layout_toEndOf="@id/imgPumpMix"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switchPumpMix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imgPumpMix"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>